Mon Mar 27 10:47:54 2023  Rob Lauer  <rlauer6@comcast.net>

	[0.61 - delete_keys()]:
	* VERSION: bump
	* NEWS.md: updated
	* README.md
	* src/main/perl/lib/Amazon/S3/Bucket.pm.in
	(delete_keys): new
	(_format_delete_keys): new
	* src/main/perl/lib/Amazon/S3/Constants.pm.in
	- new constants to support delete_keys() method
	* src/main/perl/lib/Makefile.am: stop make on error
	* src/main/perl/t/01-api.t: added tests for delete_keys()
	* src/main/perl/test.localstack: save logs

Fri Feb 10 07:47:22 2023  Rob Lauer  <rlauer6@comcast.net>>

	[0.60 - logging]:
	* VERSION: bump
	* NEWS.md: updated
	* bootstrap: support M.rr style versions
	* src/main/perl/lib/Amazon/S3.pm.in
	- removed all end of block indicators inserted by perltidy
	(new)
	- only consider 'debug' flag when internal logger used
	* src/main/perl/lib/Amazon/S3.pm.in
	(new): new
	* configure.ac
	- fix email addres
	- remove -Wall to prevent warning during configure
	* s3-perl.pl: new
	* src/main/perl/test.localstack: new
	* .gitignore: added some of the files created by `make cpan`

Wed Jan 25 11:54:59 2023  Rob Lauer  <rlauer6@comcast.net>

	[0.59 - copy_object]:
	* VERSION: bump
	* README.md: generated
	* src/main/perl/lib/Amazon/S3.pm.in
	- minor pod changes
	* src/main/perl/lib/Amazon/S3/Bucket.pm.in
	(copy_object): new
	* src/main/perl/Makefile.am: corrected comments re: make test
	* cpan/Makefile.am: PROJECT_HOME

	[unit tests]:
	* src/main/perl/t/01-api.t
	- added unit test for copy_object()
	* src/main/perl/t/04-list-buckets.t
	- use AMAZON_S3_HOST from environment not S3_HOST
	* README-TESTING.md
	- corrected way make test invoked

Mon Dec 19 09:25:04 2022  Rob Lauer  <rlauer6@comcast.net>

	[0.58 - min perl required]:
	* VERSION: bump
	* cpan/buildspec.yml: min perl 5.10
	* cpan/requires: JSON::PP

Sat Dec  3 14:09:29 2022  Rob Lauer  <rlauer6@comcast.net>

	[0.57 - rpm packaging]:
	* VERSION: bump
	* perl-Amazon-S3.spec.in
	(Requires): Net::Amazon::Signature::V4
	* src/main/perl/lib/Makefile.am